[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nattka"
authors = [{name = "Michał Górny", email = "mgorny@gentoo.org"}]
readme = "README.rst"
dynamic = ["version", "description"]
license = {file = "COPYING"}
requires-python = ">=3.6"
dependencies = [
    "lxml",
    "pkgcheck",
    "pkgcore",
    "requests",
    "snakeoil",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
]

[tool.flit.external-data]
directory = "data"

[project.optional-dependencies]
depgraph = ["networkx"]
test = [
    "pytest",
    "vcrpy",
]

[project.scripts]
nattka = "nattka.__main__:setuptools_main"

[project.urls]
Homepage = "https://github.com/mgorny/nattka/"
